--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,12 @@
 /spring-boot-person-crud/target
 /spring-boot-person-crud/spring-boot-person-crud.iml
 /spring-boot-person-crud/.idea
+/jmx-client-app/target
+/jmx-client-app/jmx-client-app.iml
+/jmx-client-app/.idea
+/fs5-feed-app/target
+/fs5-feed-app/.idea
+/fs5-feed-app/fs5-feed-app.iml
+/FS5-JMS-Spring5-app/.idea
+/FS5-JMS-Spring5-app/FS5-J,S-Spring5-app.iml
+/FS5-JMS-Spring5-app/target
