--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@
 /FS5-JMS-Spring5-app/.idea
 /FS5-JMS-Spring5-app/FS5-J,S-Spring5-app.iml
 /FS5-JMS-Spring5-app/target
+/websecurity-app-sample/target
+/websecurity-app-sample/websecurity-app-sample.iml
+/websecurity-app-sample/.idea
