--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@
 /websecurity-app-sample/target
 /websecurity-app-sample/websecurity-app-sample.iml
 /websecurity-app-sample/.idea
+/spring-web-security-app/target
+/spring-web-security-app/spring-web-security-app.iml
+/spring-web-security-app/.idea
